--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.ts",
-    "seed": "ts-node fixtures.ts"
+    "seed": "ts-node fixtures.ts",
+    "format": "npx prettier . --write",
+    "format:check": "npx prettier . --check"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +28,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.5",
     "nodemon": "^3.1.9",
+    "prettier": "3.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   }
